3. Compiling Typescript Code and Compare the Compiled javascript code with typescript code.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="text/javascript" src="js/main.js"></script>
     <div>hello world</div>
+    <div>
+        <input type="number" id="number1"/>
+        <input type="number" id="number2"/>
+        <input type="button" id="button" value="Add"/>
+    <script type="text/javascript" src="js/main.js"></script>
+      
+    </div>
 </body>
 </html>
