--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <input type="number" id="number2"/>
         <input type="button" id="button" value="Add"/>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/analytics.js"></script>
+
       
     </div>
 </body>
