18. Understanding Typescript core libs in the tsconfig.json file

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
     <div>hello world</div>
     <div>
-        <input type="number" id="number1"/>
-        <input type="number" id="number2"/>
-        <input type="button" id="button" value="Add"/>
+       <button>Click here</button>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/analytics.js"></script>
 
