--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div>hello world</div>
     <div>
        <button>Click here</button>
-    <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/analytics.js"></script>
+    <script type="text/javascript" src="dist/main.js"></script>
+    <script type="text/javascript" src="dist/analytics.js"></script>
 
       
     </div>
