--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
        <button>Click here</button>
     <script type="text/javascript" src="dist/main.js"></script>
-    <script type="text/javascript" src="dist/analytics.js"></script>
+    <script type="text/javascript" src="dist/analytics/analytics.js"></script>
 
       
     </div>
