43. DOM and Typecasting in the Typescript. Cast Values in the Typescript.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <p id="message-Output"></p>
     <div>hello world</div>
     <div>
        <button>Click here</button>
+       <input id="user-input" type="text">
     <script type="text/javascript" src="dist/main.js"></script>
     <script type="text/javascript" src="dist/analytics/analytics.js"></script>
 
