--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="app"></div>
     <p id="message-Output"></p>
     <div>hello world</div>
     <div>
-       <button>Click here</button>
-       <input id="user-input" type="text">
+       <!-- <button>Click here</button>
+       <input id="user-input" type="text"> -->
     <script type="text/javascript" src="dist/main.js"></script>
     <script type="text/javascript" src="dist/analytics/analytics.js"></script>
 
