--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div id="app"></div>
     <p id="message-Output"></p>
- 
-    <div>
-       <!-- <button>Click here</button>
-       <input id="user-input" type="text"> -->
-    <script type="text/javascript" src="dist/main.js"></script>
-    <script type="text/javascript" src="dist/analytics/analytics.js"></script>
 
-      
+    <div>
+        <!-- <button>Click here</button>
+       <input id="user-input" type="text"> -->
+       <button>Click here</button>
+
+        <script type="text/javascript" src="dist/main.js"></script>
+        <script type="text/javascript" src="dist/analytics/analytics.js"></script>
+
+
     </div>
 </body>
+
 </html>
