--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <div>
         <!-- <button>Click here</button>
        <input id="user-input" type="text"> -->
-       <button>Click here</button>
+       <button>Click here</button><br>
+       <form >
+       <input id="course-title" placeholder="course-title" type="text">  
+        <input id="course-price" placeholder="course-price" type="text">
+       <button type="submit">Save</button>
 
         <script type="text/javascript" src="dist/main.js"></script>
         <script type="text/javascript" src="dist/analytics/analytics.js"></script>
