--- a/index.html
+++ b/index.html
@@ -1,31 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Adding Project</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  </head>
+  <body>
+ 
+   <div class="container">
+    <form>
+        <div class="form-group">
+          <label for="title">Title</label>
+          <input type="text" class="form-control" id="title" aria-describedby="title" placeholder="Enter Title">
+        </div>
+        <div class="form-group">
+            <label for="description">Description</label>
+            <input type="text" class="form-control" id="description" aria-describedby="description" placeholder="Enter Description">
+        </div>
+        <div class="form-group">
+            <label for="people">People</label>
+            <input type="text" class="form-control" id="people" aria-describedby="people" placeholder="Enter People">
+        </div>
+      
+      
+        <button  type="submit" class="btn btn-primary mt-3">Create Project</button>
+      </form>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+      <div id="projects-list" class="mt-3">
+        <h2>Projects List</h2>
+        <ul>
 
-<body>
-    <div id="app"></div>
-    <p id="message-Output"></p>
+        </ul>
+      </div>
+   </div>
 
-    <div>
-        <!-- <button>Click here</button>
-       <input id="user-input" type="text"> -->
-       <button>Click here</button><br>
-       <form >
-       <input id="course-title" placeholder="course-title" type="text">  
-        <input id="course-price" placeholder="course-price" type="text">
-       <button type="submit">Save</button>
-
-        <script type="text/javascript" src="dist/main.js"></script>
-        <script type="text/javascript" src="dist/analytics/analytics.js"></script>
+   <script type="text/javascript" src="/dist//app.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 
-    </div>
 </body>
-
 </html>
