68. Typescript Project - Render projects in the List that are added by the form - Part 3.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
       <div id="projects-list" class="mt-3">
         <h2>Projects List</h2>
-        <ul>
+        <ul id="projects-list">
+          
 
         </ul>
       </div>
