69. Typescript Project - Filter projects, Refactor existing Code with inheritance and Generucs - Part 4.

--- a/index.html
+++ b/index.html
@@ -28,12 +28,18 @@
       </form>
 
       <div id="projects-list" class="mt-3">
-        <h2>Projects List</h2>
-        <ul id="projects-list">
-          
-
+        <h2>Active Projects List</h2>
+        <ul id="active-projects-list">
         </ul>
       </div>
+
+      <div id="projects-list" class="mt-3">
+        <h2>Fnished Projects List</h2>
+        <ul id="finished-projects-list">
+        </ul>
+      </div>
+
+
    </div>
 
    <script type="text/javascript" src="/dist//app.js"></script>
