--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Adding Project</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css" type="text/css">
   </head>
   <body>
  
@@ -27,13 +28,13 @@
         <button  type="submit" class="btn btn-primary mt-3">Create Project</button>
       </form>
 
-      <div id="projects-list" class="mt-3">
+      <div class="projects-list" class="mt-3">
         <h2>Active Projects List</h2>
         <ul id="active-projects-list">
         </ul>
       </div>
 
-      <div id="projects-list" class="mt-3">
+      <div class="projects-list" class="mt-3">
         <h2>Fnished Projects List</h2>
         <ul id="finished-projects-list">
         </ul>
