73. Include Typescript Files using ES^ Modules imports

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <body>
     <h3>Hi Typescript</h3>
 
-   <!-- <script type="text/javascript" src="/dist/app.js"></script> -->
-   <script type="text/javascript" src="/dist/bundle.js"></script>
+   <script type="module" src="/dist/app.js"></script>
  
 </body>
 </html>
