75. Configure Webpack using Webpack.config.js to compile typescript code uin to the js code.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <h3>Hi Typescript</h3>
 
-   <script type="module" src="/dist/app.js"></script>
+   <!-- <script type="module" src="/dist/app.js"></script> -->
+   <script type="module" src="/dist/bundle.js"></script>
  
 </body>
 </html>
