76. Add Webpack-dev-server in the Typescript Project, Enalbe Sourcemaps to debug the code.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h3>Hi Typescript</h3>
 
    <!-- <script type="module" src="/dist/app.js"></script> -->
-   <script type="module" src="/dist/bundle.js"></script>
+   <script type="module" src="dist/bundle.js"></script>
  
 </body>
 </html>
